deploy docs, coverage reports and application to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <html>
-  <head>
-    <title>Mahlzeit Dokumentation und Test Coverage</title>
-  </head>
-  <body>
-    <a href="./docs/index.html">Dokumentation</a>
-    <br>
-    <a href="./coverage/lcov-report/index.html">Test Coverage Report</a>
-  </body>
+
+<head>
+  <title>Mahlzeit Dokumentation und Test Coverage</title>
+</head>
+
+<body>
+  <a href="./dist/index.html">Applikation</a>
+  <br>
+  <a href="./docs/index.html">Dokumentation</a>
+  <br>
+  <a href="./coverage/lcov-report/index.html">Test Coverage</a>
+</body>
+
 </html>
