--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#3f51b5">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#3f51b5">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5">
+
   <title>Eventpicking</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
