--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="msapplication-navbutton-color" content="#3f51b5">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <title>Eventpicking</title>
   <base href="/">
