--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=11" />
     <title>Eventpicking</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="theme-color" content="#f48c5b">
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
+    <noscript>
+        <h1>Enable JavaScript to use Eventpicking</h1>
+    </noscript>
     <app-root>
         <div class="spinning-preloader-container">
             <div class="preloader-wrapper big active">
