WIP stripe integration

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
     </app-root>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
     <script>
         new WOW().init();
     </script>
