--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
                 });
         }
     </script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
 </body>
 
 </html>
